Fixing navigation buttons on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,7 @@ hr {
 .pagination-button {
   color: #999;
   border: 1px solid #e0e0e0;
-  padding: 15px 45px;
+  padding: 10px 25px;
   display: inline-block;
   font-size: 16px;
   font-weight: bold;
